some simplications
