# backend/src/main/java/com/huntingmrxwellington/dto/ValidMove.java
@@ -1,0 +1,5 @@
+package com.huntingmrxwellington.dto;
+
+import java.util.List;
+
+public record ValidMove(int nodeId, List<String> ticketOptions) {}
